- add fast reprojection methods - fix date index bug #26 - improve CRS handeling #25 - Restructure internal scoping #23 - ensured grids snap "out" - update readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -68,9 +68,9 @@ AOI = aoi_get(state = "NC")
 plot(AOI$geometry)
 ```
 
-Here we are loading a polygon for the state of California. More examples of constructing AOI calls can be found [here](https://mikejohnson51.github.io/AOI/).
+Here we are loading a polygon for the state of North Carolina More examples of constructing AOI calls can be found [here](https://mikejohnson51.github.io/AOI/).
 
-With an AOI, we can construct a call to a dataset for a parameter(s) and date(s) of choice. Here we are querying the PRSIM dataset for maximum and minimum temperature on October 29, 2018:
+With an AOI, we can construct a call to a dataset for a parameter(s) and date(s) of choice. Here we are querying the PRISM dataset for maximum and minimum temperature on October 29, 2018:
 
 ```{r}
 system.time({
@@ -80,8 +80,8 @@ system.time({
 
 ```{r}
 r = raster::stack(p)
-names(r) = names(p)
-rasterVis::levelplot(r, par.settings = BuRdTheme) +
+
+rasterVis::levelplot(r, par.settings = BuRdTheme, names.attr = names(p)) +
   layer(sp.lines(as_Spatial(AOI), col="gray30", lwd=3))
 ```
 
@@ -220,7 +220,7 @@ ggplot(data = future_long, aes(x = date, y = value, col = name)) +
 
 # Multi site extraction
 
-Extracting data for a set of points is an interesting challenge. It turns it is much more efficient to grab the underlying raster stack and then extract timeseries as opposed to iterating over the locations:
+Extracting data for a set of points is an interesting challenge. It turns it is much more efficient to grab the underlying raster stack and then extract time series as opposed to iterating over the locations:
 
 1. Starting with a set of locations in Brazil:
 
@@ -232,10 +232,10 @@ Extracting data for a set of points is an interesting challenge. It turns it is 
 2. `climateR` will grab the RasterStack underlying the bounding area of the points
 
 ```{r}
-sites_stack = getTerraClim(AOI = sites, 
-                           param ="tmax", 
-                           startDate = "2018-01-01", endDate = "2018-12-31")
-
+sites_stack = getTerraClim(AOI   = sites, 
+                           param = "tmax", 
+                           startDate = "2018-01-01", 
+                           endDate   = "2018-12-31")
 
 plot(sites_stack$tmax$X2018.01)
 plot(sites$geometry, add = TRUE, pch = 16, cex = .5)
@@ -248,7 +248,7 @@ sites_wide = extract_sites(sites_stack, sites, "ID")
 sites_wide$tmax[1:5, 1:5]
 ```
 
-To make the data 'tidy' simply pivot on the date column:
+To make the data 'tidy' simply pivot on the `date` column:
 
 ```{r}
 tmax = tidyr::pivot_longer(sites_wide$tmax, -date)
@@ -261,8 +261,27 @@ ggplot(data = tmax, aes(x = date, y = value, col = name)) +
   theme(legend.position = "none") 
 ```
 
+# Fast Reprojection
 
+This is a relatively new function (01-18-2020) that has not been extensively tested for how it scales with large requests. The aim is to provide fast projection of climateR gridded output. For point data use `sf::st_transform`. Starting with 2 days of precipitation data in 2080 from MACA:
+
+```{r}
+cr = climateR::getMACA(
+  AOI::aoi_get(state = "conus"), 
+  model = "CCSM4", 
+  param = 'prcp', 
+  startDate = "2080-06-29", endDate = "2080-06-30")
+
+levelplot(cr$ccsm4_prcp_rcp45_mm, par.settings = BTCTheme)
+```
+
+Lets transform the projection system from the native WGS84 to the projected CONUS Albers Equal Area (EPSG:5070).
+
+```{r}
+system.time({ cr2 = fast_reproject(cr, target_prj = 5070) })
+levelplot(cr2$ccsm4_prcp_rcp45_mm, par.settings = BTCTheme)
+```
 
 ### Support:
 
-ClimateR is written by [Mike Johnson](https://mikejohnson51.github.io), a graduate Student at the [University of California, Santa Barbara](https://geog.ucsb.edu) in [Keith C. Clarke's](http://www.geog.ucsb.edu/~kclarke/) Lab.
+`climateR` is written by [Mike Johnson](https://mikejohnson51.github.io), a graduate Student at the [University of California, Santa Barbara](https://geog.ucsb.edu) in [Keith C. Clarke's](http://www.geog.ucsb.edu/~kclarke/) Lab.
