--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ library(patchwork)
 library(climateR)
 ```
 
-# climateR <img src="man/figures/logo.png" width=230 align="right" />
+# climateR
 
 <!-- badges: start -->
  [![DOI](https://zenodo.org/badge/158620263.svg)](https://zenodo.org/badge/latestdoi/158620263)
@@ -30,8 +30,7 @@ library(climateR)
 [![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://choosealicense.com/licenses/mit/)
 [![Project Status: Active](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![LifeCycle](https://img.shields.io/badge/lifecycle-experimental-orange)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
-[![codecov](https://codecov.io/gh/mikejohnson51/climateR/branch/automation/graph/badge.svg)](https://codecov.io/gh/mikejohnson51/climateR)
-[![Codecov test coverage](https://codecov.io/gh/mikejohnson51/climateR/branch/master/graph/badge.svg)](https://app.codecov.io/gh/mikejohnson51/climateR?branch=master)
+[![codecov](https://codecov.io/gh/mikejohnson51/climateR/branch/master/graph/badge.svg?token=7zs6C91SDw)](https://codecov.io/gh/mikejohnson51/climateR)
 <!-- badges: end -->
 
 `climateR` simplifies the steps needed to get climate data into R. At its core it provides three main things:
@@ -211,7 +210,6 @@ ggplot() +
 Not all datasets are USA focused either. TerraClimate offers global, monthly data up to the current year for many variables, and CHIRPS provides daily rainfall data:
 
 ```{r, fig.width = 15}
-
 kenya = aoi_get(country = "Kenya")
 tc = getTerraClim(kenya, varname = "pet", startDate = "2018-01-01")
 chirps = getCHIRPS(kenya, startDate = "2018-01-01", endDate = "2018-01-04" )
@@ -219,12 +217,13 @@ chirps = getCHIRPS(kenya, startDate = "2018-01-01", endDate = "2018-01-04" )
 library(patchwork)
 
 ggplot() +
-  geom_spatraster(data = tc$pet_total) +
+  geom_spatraster(data = tc$pet) +
   facet_wrap(~lyr) +
   scale_fill_whitebox_c(
     palette = "muted",
     na.value = "white"
   ) + 
+  geom_sf(data = kenya, fill = NA, lwd = 2, col = "black") + 
   theme_minimal() + 
   ggplot() +
   geom_spatraster(data = chirps$precip) +
@@ -233,7 +232,8 @@ ggplot() +
     palette = "muted",
     na.value = "white"
   ) + 
-  theme_minimal()
+  geom_sf(data = kenya, fill = NA, lwd = 2, col = "black") + 
+  theme_minimal() 
 
 
 ```
@@ -294,7 +294,7 @@ Extracting data for a set of points is an interesting challenge. It turns it is 
 1. Starting with a set of locations in Colorado:
 
 ```{r}
-(f = system.file("co/co_cities.rds", package = "climateR"))
+f = system.file("co/co_cities.rds", package = "climateR")
 cities = readRDS(f)
 ```
 
@@ -309,7 +309,7 @@ sites_stack = getTerraClim(AOI   = cities,
 
 ```{r}
 {
-  plot(sites_stack$tmax_total[[1]])
+  plot(sites_stack$tmax[[1]])
   plot(vect(cities), add = TRUE, pch = 16, cex = .5)
 }
 ```
